--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -2,6 +2,8 @@
   background-color: #36185F;
   color: white;
   text-align: center;
+  padding: 1rem 0;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .container {
@@ -14,7 +16,7 @@
 }
 
 .first-component{
-  padding: 6rem 0;
+  padding: 3rem 0;
 }
 
 .centralize {
