Change the library search component from the Header to the top of the book listing. Maybe more clear structure for searching in the app and no need for hacks to remove the search component from header on the Add book view.

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -23,9 +23,11 @@
   text-align: center;
 }
 
-.inline-search {
-  display: inline;
+.library-search {
   color: black;
+}
+.library-search > input {
+  width: 100%;
 }
 
 .highlight {
