Show current loans as a list after the description on book card if there are any loans for the book at the moment

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -60,6 +60,11 @@ button:disabled {
   opacity: 0.4 !important;
 }
 
+button.show-more, button.show-less {
+  border-style: none;
+  width: 100%;
+}
+
 .button-primary-netlight {
   color: white;
   background-color: #CC9933;
