--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #36185F;
+  background-color:#7473BD; 
   color: white;
   text-align: center;
   padding: 1rem 0;
@@ -45,13 +45,13 @@
 .nav-btn {
   display: inline-block;
   margin: 5px;
-  background-color: #36185F;
+  background-color:#7473BD; 
   color: white;
   padding: 0 20px;
 }
 
 .nav-btn:hover, .nav-btn:focus {
-  background-color: #4f3079;
+  background-color:#5B5AA4;
   border-color: #bbb;
   color: white;
 }
@@ -67,14 +67,14 @@ button.show-more, button.show-less {
 
 .button-primary-netlight {
   color: white;
-  background-color: #CC9933;
-  border-color: #CC9933;
+  background-color:#FF7979;
+  border-color:#FF7979; 
 }
 
 .button-primary-netlight:hover:enabled, .button-primary-netlight:focus:enabled {
   color: white;
-  background-color: #af8229;
-  border-color: #af8229;
+  background-color:#E66060;
+  border-color:#E66060; 
 }
 
 .card {
